--- a/Builds/Emscripten/Makefile
+++ b/Builds/Emscripten/Makefile
@@ -42,8 +42,7 @@ ifeq ($(CONFIG),Debug)
 
   JUCE_CFLAGS += $(JUCE_CPPFLAGS) $(TARGET_ARCH) -O0 $(CFLAGS)
   JUCE_CXXFLAGS += $(JUCE_CFLAGS) -std=c++17 $(CXXFLAGS) -s USE_PTHREADS=1 -s USE_FREETYPE=1 -s DISABLE_EXCEPTION_CATCHING=0
-  JUCE_LDFLAGS += $(TARGET_ARCH) -L$(JUCE_BINDIR) -L$(JUCE_LIBDIR) -L../../modules/onnxruntime/lib/wasm -lrt -ldl -lpthread -lonnxruntime -lopenal $(LDFLAGS) -s USE_PTHREADS -s USE_FREETYPE=1 -s DISABLE_EXCEPTION_CATCHING=0 -s TOTAL_MEMORY=256MB -s NO_EXIT_RUNTIME -s EXPORTED_FUNCTIONS="['_main', '_juce_animationFrameCallback', '_juce_mouseCallback', '_juce_keyboardCallback', '_juce_inputCallback']" -s EXPORTED_RUNTIME_METHODS="['cwrap']" -s LLD_REPORT_UNDEFINED \
-	--preload-file ../../usr/X11R6/lib/X11/fonts/@/usr/X11R6/lib/X11/fonts/ \
+  JUCE_LDFLAGS += $(TARGET_ARCH) -L$(JUCE_BINDIR) -L$(JUCE_LIBDIR) $(LDFLAGS) -L../../modules/onnxruntime/lib/wasm -lrt -ldl -lpthread -lonnxruntime -lopenal -s USE_PTHREADS -s USE_FREETYPE=1 -s DISABLE_EXCEPTION_CATCHING=0 -s TOTAL_MEMORY=256MB -s NO_EXIT_RUNTIME -s EXPORTED_FUNCTIONS="['_main', '_juce_animationFrameCallback', '_juce_mouseCallback', '_juce_keyboardCallback', '_juce_inputCallback']" -s EXPORTED_RUNTIME_METHODS="['cwrap']" -s LLD_REPORT_UNDEFINED \
 	--preload-file ../../assets/fonts/ \
 	--preload-file ../../assets/models/ \
 	--preload-file ../../assets/pictures/ \
@@ -65,8 +64,7 @@ ifeq ($(CONFIG),Release)
 
   JUCE_CFLAGS += $(JUCE_CPPFLAGS) $(TARGET_ARCH) -O3 $(CFLAGS)
   JUCE_CXXFLAGS += $(JUCE_CFLAGS) -std=c++17 $(CXXFLAGS) -s USE_PTHREADS=1 -s USE_FREETYPE=1 -s DISABLE_EXCEPTION_CATCHING=0
-  JUCE_LDFLAGS += $(TARGET_ARCH) -L$(JUCE_BINDIR) -L$(JUCE_LIBDIR) -L../../modules/onnxruntime/lib/wasm -lrt -ldl -lpthread -lonnxruntime -lopenal $(LDFLAGS) -s USE_PTHREADS -s USE_FREETYPE=1 -s DISABLE_EXCEPTION_CATCHING=0 -s TOTAL_MEMORY=128MB -s NO_EXIT_RUNTIME -s EXPORTED_FUNCTIONS="['_main', '_juce_animationFrameCallback', '_juce_mouseCallback', '_juce_keyboardCallback', '_juce_inputCallback']" -s EXPORTED_RUNTIME_METHODS="['cwrap']" \ 
-	--preload-file ../../usr/X11R6/lib/X11/fonts/@/usr/X11R6/lib/X11/fonts/ \
+  JUCE_LDFLAGS += $(TARGET_ARCH) -L$(JUCE_BINDIR) -L$(JUCE_LIBDIR) $(LDFLAGS) -L../../modules/onnxruntime/lib/wasm -lrt -ldl -lpthread -lonnxruntime -lopenal -s USE_PTHREADS -s USE_FREETYPE=1 -s DISABLE_EXCEPTION_CATCHING=0 -s TOTAL_MEMORY=128MB -s NO_EXIT_RUNTIME -s EXPORTED_FUNCTIONS="['_main', '_juce_animationFrameCallback', '_juce_mouseCallback', '_juce_keyboardCallback', '_juce_inputCallback']" -s EXPORTED_RUNTIME_METHODS="['cwrap']" \
 	--preload-file ../../assets/fonts/ \
 	--preload-file ../../assets/models/ \
 	--preload-file ../../assets/pictures/ \
